# ros_realsense_volumeEstimation

./: .gitignore  CMakeLists.txt  README.md  package.xml
msg/: depth_msg.msg
scripts/: capture.py  captures.py  captures2.py  main.py  parameters.py  pc2pcd.pcd  process.py  stitch.py  test.py  volume.py
scripts/5mm/: hill_cloud.pcd  hill_labels.pickle  hole_cloud.pcd  hole_labels.pickle  inlier_cloud.pcd  outlier_cloud.pcd  plane_model.pickle  test5_5mm.pcd  test5_crop_5mm.pcd
scripts/captures/: capture1.pcd  capture2.pcd  capture3.pcd  capture4.pcd
scripts/data/: hill_cloud.pcd  hill_labels.pickle  hole_cloud.pcd  hole_labels.pickle  inlier_cloud.pcd  outlier_cloud.pcd  plane_model.pickle  test5_crop.pcd
scripts/no/: hill_cloud.pcd  hill_labels.pickle  hole_cloud.pcd  hole_labels.pickle  inlier_cloud.pcd  outlier_cloud.pcd  plane_model.pickle  test5_crop_no.pcd
src/: realsense_center_depth.cpp  realsense_depth.cpp  realsense_process.cpp
test/: grid.py  main.py  parameters.py  playback.py  process.py  realtime.py  record.py  test.cpp  test.py  volume.py
